Add comment about prde

--- a/going_subphraseless.ipynb
+++ b/going_subphraseless.ipynb
@@ -845,7 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! Now we can confidently say that valid NP head candidates should have only the following `sp` values: `subs`, `nmpr`, `adjv`, `prps`. "
+    "Great! Now we can confidently say that valid NP head candidates should have only the following `sp` values: `subs`, `nmpr`, `adjv`, `prps`, with some allowances made for `prde`."
    ]
   },
   {
