Additiona work on Context class

--- a/going_subphraseless.ipynb
+++ b/going_subphraseless.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,10 +987,9 @@
     "    often serve multiple roles. As such, a nominal can\n",
     "    govern (\"mom\") or be governed (\"kid\") depending\n",
     "    on its use. Thus, symmetrical data is provided\n",
-    "    in the form of self.moms and self.kids for all\n",
-    "    contexts that are queried, wherein moms are\n",
-    "    governing this word, and kids are governed by\n",
-    "    this word.\n",
+    "    in the form of self.mom and self.kid for all\n",
+    "    contexts that are queried, wherein a mom is\n",
+    "    governing this word, and a kid is governed.\n",
     "    '''\n",
     "    \n",
     "    def __init__(self, n):\n",
@@ -1006,12 +1005,12 @@
     "        const_m = clear([\n",
     "            \n",
     "            (p(-1) \n",
-    "                if p(-1,'st')=='c'\n",
+    "                if p(-1,'st') == 'c'\n",
     "                else None),\n",
     "\n",
     "            (p(-2) \n",
-    "                if p(-2,'st')=='c'\n",
-    "                and p(-1, 'sp')=='art'\n",
+    "                if p(-2,'st') == 'c'\n",
+    "                and p(-1,'sp') == 'art'\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
@@ -1020,13 +1019,13 @@
     "        const_k = clear([\n",
     "            \n",
     "            (p(1) \n",
-    "                if p(0,'st')=='c'\n",
-    "                and p(1, 'sp')!='art'\n",
+    "                if p(0,'st') == 'c'\n",
+    "                and p(1,'sp') != 'art'\n",
     "                else None),\n",
     "\n",
     "            (p(2) \n",
-    "                if p(0,'st')=='c' \n",
-    "                and p(1, 'sp')=='art'\n",
+    "                if p(0,'st') == 'c' \n",
+    "                and p(1,'sp') == 'art'\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
@@ -1039,22 +1038,22 @@
     "        adjv_m = clear([\n",
     "            \n",
     "            (p(-1) \n",
-    "                 if p(0,'sp')=='adjv'\n",
-    "                and p(-1,'nu gn')==p(0,'nu gn')\n",
-    "                and p(-1,'st')=='a'\n",
+    "                if p(0, 'sp') == 'adjv'\n",
+    "                and p(-1, 'nu gn') == p(0,'nu gn')\n",
+    "                and p(-1, 'st') == 'a'\n",
     "                else None),\n",
     "\n",
     "            (p(-1) \n",
-    "                 if p(-1,'sp vt').issubset({'verb', 'ptcp', 'ptca'})\n",
-    "                and p(-1,'nu gn')==p(0,'nu gn')\n",
-    "                and p(0,'st')=='a'\n",
+    "                if p(-1,'sp vt').issubset({'verb', 'ptcp', 'ptca'})\n",
+    "                and p(-1,'nu gn') == p(0,'nu gn')\n",
+    "                and p(0,'st') == 'a'\n",
     "                else None),\n",
     "\n",
     "            (p(-2) \n",
-    "                if p(-1,'sp')=='art'\n",
+    "                if p(-1,'sp') == 'art'\n",
     "                and p(-2,'sp') in {'subs','nmpr','adjv'}\n",
-    "                and p(-2,'nu gn')==p(0,'nu gn')\n",
-    "                and p(-2,'st')=='a'\n",
+    "                and p(-2,'nu gn') == p(0,'nu gn')\n",
+    "                and p(-2,'st') == 'a'\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
@@ -1062,22 +1061,22 @@
     "        adjv_k = clear([\n",
     "            \n",
     "            (p(1)\n",
-    "                if p(0,'sp')=='adjv'\n",
-    "                and p(1,'nu gn')==p(0,'nu gn')\n",
-    "                and p(0,'st')=='a'\n",
+    "                if p(1,'sp') == 'adjv'\n",
+    "                and p(1,'nu gn') == p(0,'nu gn')\n",
+    "                and p(0,'st') == 'a'\n",
     "                else None),\n",
     "\n",
     "            (p(1)\n",
     "                if p(1,'sp vt').issubset({'verb', 'ptcp', 'ptca'})\n",
-    "                and p(1,'nu gn')==p(0,'nu gn')\n",
-    "                and p(0,'st')=='a'\n",
+    "                and p(1,'nu gn') == p(0,'nu gn')\n",
+    "                and p(0,'st') == 'a'\n",
     "                else None),\n",
     "\n",
     "            (p(2)\n",
-    "                if p(1,'sp')=='art'\n",
+    "                if p(1,'sp') == 'art'\n",
     "                and p(2,'sp') in ('subs','nmpr','adjv')\n",
-    "                and p(2,'nu gn')==p(0,'nu gn')\n",
-    "                and p(0,'st')=='a'\n",
+    "                and p(2,'nu gn') == p(0,'nu gn')\n",
+    "                and p(0,'st') == 'a'\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
@@ -1085,38 +1084,45 @@
     "        self.kid['adjv'] = Getter(adjv_k)[0]\n",
     "        \n",
     "        # ** preposition patterns (mother only) **\n",
+    "        \n",
     "        prep_m = clear([ \n",
     "            \n",
     "            (p(-1)\n",
-    "                if p(-1,'sp')=='prep' or p(-1) in custom_preps\n",
+    "                if p(-1,'sp') == 'prep' or p(-1) in custom_preps\n",
     "                else None),\n",
     "\n",
     "            (p(-2)\n",
-    "                if p(-1,'sp')=='art'\n",
-    "                and p(-2,'sp')=='prep' or p(-2) in custom_preps\n",
+    "                if p(-1,'sp') == 'art'\n",
+    "                and p(-2,'sp') == 'prep' or p(-2) in custom_preps\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
     "        self.mom['prep'] = Getter(prep_m)[0]\n",
     "    \n",
-    "        # coordinate patterns\n",
+    "        # ** coordinate patterns **\n",
     "        # NB: before == mom; after == kid\n",
     "        \n",
     "        # -- mom\n",
     "        coord_m = clear([\n",
-    "            (p(-2) if p(-1)=='conj'\n",
+    "            \n",
+    "            (p(-2) \n",
+    "                if p(-1, 'sp') == 'conj'\n",
     "                else None),\n",
     "\n",
-    "            (p(-3) if p(-1)=='art'\n",
-    "                and p(-2)=='conj'\n",
+    "            (p(-3)\n",
+    "                if p(-1, 'sp') == 'art'\n",
+    "                and p(-2, 'sp') == 'conj'\n",
     "                else None),\n",
     "\n",
-    "            (p(-3) if p(-1)=='prep'\n",
-    "                and p(-2)=='conj' else None),\n",
+    "            (p(-3)\n",
+    "                if p(-1, 'sp') == 'prep'\n",
+    "                and p(-2, 'sp') == 'conj'\n",
+    "                else None),\n",
     "\n",
-    "            (p(-4) if p(-1)=='art'\n",
-    "                and p(-2)=='prep' or p(-2) in custom_preps\n",
-    "                and p(-3)=='conj'\n",
+    "            (p(-4)\n",
+    "                if p(-1,'sp') == 'art'\n",
+    "                and p(-2,'sp') == 'prep' or p(-2) in custom_preps\n",
+    "                and p(-3,'sp') == 'conj'\n",
     "                else None),\n",
     "        ])\n",
     "        \n",
@@ -1124,24 +1130,24 @@
     "        coord_k = clear([\n",
     "            \n",
     "            (p(2)\n",
-    "                if p(1)=='conj'\n",
+    "                if p(1,'sp') == 'conj'\n",
     "                else None),\n",
     "            \n",
     "            (p(3)\n",
-    "                if p(1)=='conj'\n",
-    "                and p(2)=='art'\n",
+    "                if p(1,'sp') == 'conj'\n",
+    "                and p(2, 'sp') == 'art'\n",
     "                else None),\n",
     "            \n",
     "            (p(3)\n",
-    "                if p(1)=='conj'\n",
-    "                and p(2)=='prep' or p(2) in custom_preps\n",
-    "                and p(3,'sp')!='art'\n",
+    "                if p(1,'sp') == 'conj'\n",
+    "                and p(2,'sp') == 'prep' or p(2) in custom_preps\n",
+    "                and p(3,'sp') != 'art'\n",
     "                else None),\n",
     "            \n",
     "            (p(4)\n",
-    "                if p(1)=='conj'\n",
-    "                and p(2)=='prep' or p(2) in custom_preps\n",
-    "                and p(3, 'sp')=='art'\n",
+    "                if p(1,'sp') == 'conj'\n",
+    "                and p(2,'sp') == 'prep' or p(2) in custom_preps\n",
+    "                and p(3,'sp') == 'art'\n",
     "                else None),\n",
     "            \n",
     "        ])\n",
@@ -1149,28 +1155,33 @@
     "        self.mom['coord'] = Getter(coord_m)[0]\n",
     "        self.kid['coord'] = Getter(coord_k)[0]\n",
     "    \n",
-    "        # quantifier patterns\n",
+    "        # ** quantifier patterns **\n",
     "        \n",
     "        # -- mom\n",
     "        quant_m = clear([\n",
     "            \n",
     "            (p(-1)\n",
     "                if p(0) in custom_quants\n",
-    "                and p(-1, 'sp') in {'subs', 'adjv'}\n",
+    "                and p(-1) not in custom_quants\n",
+    "                and p(-1,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "            \n",
     "            (p(-2)\n",
-    "                if p(-1,'sp')=='art'\n",
-    "                and p(0) in custom_quants\n",
+    "                if p(0) in custom_quants\n",
+    "                and p(-2) not in custom_quants\n",
+    "                and p(-1,'sp') == 'art'\n",
     "                else None),\n",
     "            \n",
     "            (p(1) \n",
     "                if p(0) in custom_quants\n",
-    "                and p(1, 'sp') in {'subs', 'adjv'}\n",
+    "                and p(1) not in custom_quants\n",
+    "                and p(1,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "            \n",
-    "            (p(2) if p(0) in custom_quants\n",
-    "                and p(1, 'sp')=='art'\n",
+    "            (p(2)\n",
+    "                if p(0) in custom_quants\n",
+    "                and p(2) not in custom_quants\n",
+    "                and p(1,'sp') == 'art'\n",
     "                else None),\n",
     "        \n",
     "        ])\n",
@@ -1180,28 +1191,28 @@
     "            \n",
     "            (p(1) \n",
     "                if p(0) not in custom_quants\n",
-    "                and p(1,'sp') in {'subs', 'adjv'}\n",
     "                and p(1) in custom_quants\n",
+    "                and p(1,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "\n",
     "            (p(2) \n",
     "                if p(0) not in custom_quants\n",
-    "                and p(1,'sp')=='art'\n",
-    "                and p(2,'sp') in {'subs', 'adjv'}\n",
     "                and p(2) in custom_quants\n",
+    "                and p(1,'sp') == 'art'\n",
+    "                and p(2,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "\n",
     "            (p(-1) \n",
     "                if p(0) not in custom_quants\n",
-    "                and p(-1,'sp') in {'subs', 'adjv'}\n",
     "                and p(-1) in custom_quants\n",
+    "                and p(-1,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "\n",
     "            (p(-2) \n",
     "                if p(0) not in custom_quants\n",
-    "                and p(-1,'sp')=='art'\n",
-    "                and p(-2,'sp') in {'subs', 'adjv'}\n",
     "                and p(-2) in custom_quants\n",
+    "                and p(-1,'sp') == 'art'\n",
+    "                and p(-2,'sp') in {'subs', 'adjv'}\n",
     "                else None),\n",
     "            \n",
     "        ])\n",
@@ -1211,19 +1222,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 193,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "t = Context(17596)"
+    "### Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t = Context(22423)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Positions(22423, 'phrase').get\n",
+    "p2 = Positions(22424, 'phrase').get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'f', 'pl'}"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p(0, 'gn nu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'f', 'pl'}"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2(0, 'gn nu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22424"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t.kid['adjv']"
    ]
