Add nominals set; begin heads work again

--- a/going_subphraseless.ipynb
+++ b/going_subphraseless.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "## Basic Concepts\n",
     "\n",
-    "A semantic head will most often stand in a syntactically independent position. For Hebrew nominal phrases, that essentially means a word which is not precided by a construct, which is not in an attributive slot (e.g. H + noun + H + ATTRIBUTIVE), and which is not in an adjectival slot (e.g. noun + noun as in אישׁ טוב).\n",
+    "A semantic head will most often stand in a syntactically independent position. For Hebrew nominal phrases, that essentially means a word which is not precided by a construct, and which is semantically central (excluding attributive slots (e.g. H + noun + H + ATTRIBUTIVE) or an adjectival slots (e.g. noun + noun as in אישׁ טוב).\n",
     "\n",
     "The situation is slightly complicated by quantifier expressions, which may be syntactically independent but semantically secondary. These are expressed through specialized lexical items such as cardinal numbers and qualitative quantifiers (e.g.  \"כל\" and \"חצי\").\n",
     "\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -349,9 +349,11 @@
    ],
    "source": [
     "import collections\n",
+    "import pickle\n",
     "import random\n",
     "import re\n",
     "from tf.app import use\n",
+    "wsets = pickle.load(open('wordsets/wsets.pickle', 'rb'))\n",
     "A = use('bhsa', hoist=globals(), silent=True)"
    ]
   },
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +392,7 @@
        " ('prin', 1026))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,13 +841,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -853,13 +848,6 @@
     "\n",
     "Data needed to process whether a word contains a disjunctive accent or not."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
