add new machinery

--- a/going_subphraseless.ipynb
+++ b/going_subphraseless.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -371,6 +371,8 @@
     "import pickle\n",
     "import random\n",
     "import re\n",
+    "from IPython.display import display, HTML\n",
+    "from pprint import pprint\n",
     "from tf.app import use\n",
     "wsets = pickle.load(open('wordsets/wsets.pickle', 'rb'))\n",
     "A = use('bhsa', hoist=globals(), silent=True)"
@@ -404,23 +406,385 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(wsets['cons_pairs'].keys())[:10]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Machinery\n",
     "\n",
-    "We could use some machinery to do the hard work of looking in and around a node. In the older approach we used TF search templates. But these are not very efficient at scale, and they are always bound by the limits of the query language. I take another approach here: a class which, when called, can give all sorts of contextual information about any node which is fed in. This class is related to the `Mom` used in wordsets ([here](wordsets/context.py)), and in fact it depends on the output of that class which is stored in the `mom` and `kid` word sets.\n",
+    "We could use some machinery to do the hard work of looking in and around a node. In the older approach we used TF search templates. But these are not very efficient at scale, and they are always bound by the limits of the query language. I take another approach here: a class which, when called, can give all sorts of contextual information about any node which is fed in. This class is related to the `Mom` class used in wordsets ([here](wordsets/context.py)), and in fact it depends on the output of that class which is stored in the `mom` and `kid` word sets.\n",
     "\n",
-    "The machines we use are defined in the positions module. They are series of positional tests and string evaluators. By writing our conditions as strings, we can maintain a mapping between the truth conditions and their results. This is intended to aid debugging and the process of elimination which we apply herein."
+    "The \"machines\" we use are defined in the positions module. They are series of position testers for a node and string evaluators. By writing our conditions as strings, we can maintain a mapping between the truth conditions and their results. This is intended to aid debugging and the process of elimination which we apply herein."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wordsets.positions import Getter, Positions, Evaluator, showconds"
+    "from wordsets.positions import Getter, Positions, Evaluator, showconds\n",
+    "from wordsets.context import Mom, Relas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# relas = Relas(A, **wsets)\n",
+    "# mom = relas.mom\n",
+    "# kid = relas.kid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Construction\n",
+    "\n",
+    "Let's begin constructing the heads evaluator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Relations:\n",
+    "    \n",
+    "    '''\n",
+    "    Tags relations within a phrase or phrase_atom.\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, phrase, wsets, tf):\n",
+    "        \n",
+    "        # TF and sets\n",
+    "        self.tf = tf\n",
+    "        self.phrase = phrase\n",
+    "        self.F, self.T, self.L = tf.api.F, tf.api.T, tf.api.L\n",
+    "        self.wsets = wsets\n",
+    "        self.noms = wsets['noms']\n",
+    "        self.quants = wsets['quants']\n",
+    "        self.preps = wsets['preps']\n",
+    "        \n",
+    "        # evaluators\n",
+    "        self.evaler = Evaluator(locals())\n",
+    "        self.eval = self.evaler.evaluate\n",
+    "        self.conddict = self.evaler.conddict\n",
+    "    \n",
+    "        # put relations here\n",
+    "        self.rela = collections.defaultdict(lambda: collections.defaultdict())\n",
+    "        self.explain = collections.defaultdict(lambda: collections.defaultdict())\n",
+    "        \n",
+    "        # run relation taggings\n",
+    "        self.construct()\n",
+    "    \n",
+    "    def search(self, relastr, *searchdicts):\n",
+    "        '''\n",
+    "        Identifies relations in the phrase\n",
+    "        that match a supplied set of conditions.\n",
+    "        Requires a relation string and a series \n",
+    "        of search dicts with keys: {src, tgt, cnd}\n",
+    "        \n",
+    "        -- src -- \n",
+    "        the origin of the relation, position zero, i.e. P(0)\n",
+    "        \n",
+    "        -- tgt-- \n",
+    "        the target of the relation, position +/- from origin\n",
+    "        \n",
+    "        --cnd-- \n",
+    "        a set of conditional strings in a tuple which should \n",
+    "        be evaluated against the populated namespace.\n",
+    "        Search populates the namespace of a custom Evaluation class before\n",
+    "        evaluating the strings. Strings are used instead of raw code\n",
+    "        so that a mapping can be preserved between a condition and its \n",
+    "        truth value. \n",
+    "        '''\n",
+    "        \n",
+    "        # cycle through phrase words\n",
+    "        for w in self.L.d(self.phrase, 'word'):\n",
+    "            \n",
+    "            # set up positions and namespaces\n",
+    "            noms, quants, preps = self.noms, self.quants, self.preps\n",
+    "            P = Positions(w, self.F.otype.v(self.phrase), self.tf).get\n",
+    "            self.evaler.update(locals())\n",
+    "            \n",
+    "            # evaluate conditions\n",
+    "            matches = []\n",
+    "            evaled = [] # keep track for explain\n",
+    "            for search in searchdicts:  \n",
+    "                source = self.eval(search['src'])\n",
+    "                target = self.eval(search['tgt'])\n",
+    "                conds = self.conddict(*search['cnd'])\n",
+    "                evaled.append((source, target, conds)) # for explain\n",
+    "                if all(conds.values()):\n",
+    "                    matches.append((source, target))\n",
+    "\n",
+    "            # assume first valid match is good\n",
+    "            match = Getter(matches)[0]\n",
+    "            \n",
+    "            if match:\n",
+    "                \n",
+    "                # unpack match data\n",
+    "                source, target = match\n",
+    "                \n",
+    "                # assign match data\n",
+    "                self.rela[relastr][source] = target\n",
+    "                self.explain[relastr][source] = evaled\n",
+    "                \n",
+    "\n",
+    "    def construct(self):\n",
+    "\n",
+    "        self.search('cons',\n",
+    "                    \n",
+    "            {\n",
+    "                'src': 'P(0)',\n",
+    "                'tgt': 'P(1)',\n",
+    "                'cnd': (\n",
+    "                    \"P(0,'st') == 'c'\",\n",
+    "                    \"P(0) not in quants|preps\",\n",
+    "                    \"P(1,'sp') != 'art'\"\n",
+    "                )\n",
+    "            },\n",
+    "            \n",
+    "            {\n",
+    "                'src': 'P(0)',\n",
+    "                'tgt': 'P(2)',\n",
+    "                'cnd': (\n",
+    "                    \"P(0,'st') == 'c'\",\n",
+    "                    \"P(0, 'st') not in quants|preps\",\n",
+    "                    \"P(1, 'sp') == 'art'\"\n",
+    "                )\n",
+    "                \n",
+    "            }\n",
+    "        )\n",
+    "        \n",
+    "    def adjective(self):\n",
+    "        \n",
+    "        self.search('adjc',\n",
+    "                    \n",
+    "            {\n",
+    "                'src': 'P(0)',\n",
+    "                'tgt': 'P(-1)',\n",
+    "                'cnd': (\n",
+    "                    \"P(0,'st') in {'NA', 'a'}\",\n",
+    "                    \"P(0, 'st') in noms\",\n",
+    "                    \"P(0,'sp') in {'adjv', 'advb'}\",\n",
+    "                )\n",
+    "            }\n",
+    "        \n",
+    "        )\n",
+    "        \n",
+    "def prettyconds(condsdict):\n",
+    "    '''\n",
+    "    Iterate through an explain dict for a rela\n",
+    "    and print out all of checked conditions.\n",
+    "    '''\n",
+    "    for source, searches in condsdict.items():\n",
+    "        for search in searches:\n",
+    "            src, target, conds = search\n",
+    "            print(f'{source} -> {target}')\n",
+    "            for cond, value in conds.items():\n",
+    "                print('\\t{:<30} {:>30}'.format(cond, str(value)))\n",
+    "            print()\n",
+    "        \n",
+    "def search_phrases(relastr, end=10):\n",
+    "    '''\n",
+    "    Searches phrases with the specified relation \n",
+    "    and prints out their descriptive explanation.\n",
+    "    '''\n",
+    "    \n",
+    "    matches = []\n",
+    "    for ph in F.otype.s('phrase_atom'):\n",
+    "        R = Relations(ph, wsets, A)\n",
+    "        if R[relastr]:\n",
+    "            matches.append(R)\n",
+    "        \n",
+    "    # display\n",
+    "    for match in matches[:end]:\n",
+    "        A.pretty(match.phrase, withNodes=True)\n",
+    "        prettyconds(match.rela[relastr])\n",
+    "        display(HTML('<hr>'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = 904941\n",
+    "\n",
+    "R = Relations(test, wsets,  A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "307 -> 308\n",
+      "\tP(0,'st') == 'c'                                         True\n",
+      "\tP(0) not in quants|preps                                 True\n",
+      "\tP(1,'sp') != 'art'                                      False\n",
+      "\n",
+      "307 -> 309\n",
+      "\tP(0,'st') == 'c'                                         True\n",
+      "\tP(0, 'st') not in quants|preps                           True\n",
+      "\tP(1, 'sp') in {'art'}                                    True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prettyconds(R.explain['cons'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cons\n",
+      "[(25,\n",
+      "  26,\n",
+      "  {'P(0) not in quants': True,\n",
+      "   \"P(0,'st') == 'c'\": True,\n",
+      "   \"P(1,'sp') != 'art'\": True})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rel, ex in R.explain[25].items():\n",
+    "    print(rel)\n",
+    "    pprint(ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.66s 245354 results\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr class=\"tf\">\n",
+       "  <th class=\"tf\">n</th><th class=\"tf\">p</th>\n",
+       "  <th class=\"tf\">word</th>\n",
+       "</tr>\n",
+       "\n",
+       "<tr class=\"tf\"><td class=\"tf\">1</td><td class=\"tf\"> <a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"show this passage in SHEBANQ\" sec=\"Genesis 1:1\">Genesis 1:1</a></td><td class=\"tf\"><span class=\"hb\"><a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"Genesis 1:1\" sec=\"Genesis 1:1\"><span  class=\"hl\" >בְּ</span></a></span></td></tr>\n",
+       "<tr class=\"tf\"><td class=\"tf\">2</td><td class=\"tf\"> <a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"show this passage in SHEBANQ\" sec=\"Genesis 1:1\">Genesis 1:1</a></td><td class=\"tf\"><span class=\"hb\"><a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"Genesis 1:1\" sec=\"Genesis 1:1\"><span  class=\"hl\" >בָּרָ֣א </span></a></span></td></tr>\n",
+       "<tr class=\"tf\"><td class=\"tf\">3</td><td class=\"tf\"> <a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"show this passage in SHEBANQ\" sec=\"Genesis 1:1\">Genesis 1:1</a></td><td class=\"tf\"><span class=\"hb\"><a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"Genesis 1:1\" sec=\"Genesis 1:1\"><span  class=\"hl\" >אֵ֥ת </span></a></span></td></tr>\n",
+       "<tr class=\"tf\"><td class=\"tf\">4</td><td class=\"tf\"> <a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"show this passage in SHEBANQ\" sec=\"Genesis 1:1\">Genesis 1:1</a></td><td class=\"tf\"><span class=\"hb\"><a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"Genesis 1:1\" sec=\"Genesis 1:1\"><span  class=\"hl\" >הַ</span></a></span></td></tr>\n",
+       "<tr class=\"tf\"><td class=\"tf\">5</td><td class=\"tf\"> <a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"show this passage in SHEBANQ\" sec=\"Genesis 1:1\">Genesis 1:1</a></td><td class=\"tf\"><span class=\"hb\"><a href=\"https://shebanq.ancient-data.org/hebrew/text?book=Genesis&amp;chapter=1&amp;verse=1&amp;version=c&amp;mr=m&amp;qw=q&amp;tp=txt_p&amp;tr=hb&amp;wget=v&amp;qget=v&amp;nget=vt\" title=\"Genesis 1:1\" sec=\"Genesis 1:1\"><span  class=\"hl\" >וְ</span></a></span></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A.table(A.search('''\n",
+    "\n",
+    "word st=a\n",
+    "\n",
+    "'''), end=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'לְמֶמְשֶׁ֣לֶת הַלַּ֔יְלָה '"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T.text(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(904941,)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
    ]
   },
   {
@@ -501,6 +865,48 @@
     "        \n",
     "len(simpleres)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_quantified(word, tf, **wsets):\n",
+    "    '''\n",
+    "    Recursively calls down a quantifier chain until\n",
+    "    finding a quantified word.\n",
+    "    '''\n",
+    "    \n",
+    "    quants, noms = wsets['quants'], wsets['noms']\n",
+    "\n",
+    "    P = Positions(word, 'phrase_atom', tf).get\n",
+    "\n",
+    "    target = (\n",
+    "        lambda n: P(n), \n",
+    "        lambda n: P(n) not in quants,\n",
+    "        lambda n: P(n, 'sp') in noms,\n",
+    "    )\n",
+    "\n",
+    "    # check this word\n",
+    "    if all(cond(0) for cond in target):\n",
+    "        return word\n",
+    "    \n",
+    "    # check next word\n",
+    "    elif all(cond(P(1)) for cond in target):\n",
+    "        return P(1)\n",
+    "    \n",
+    "    # move up one\n",
+    "    else:\n",
+    "        return get_quantified(P(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
